# Postman2Jmeter

./: .gitignore  LICENSE  MANIFEST.in  README.md  build_exe.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
src/: converter.py  gui.py  main.py  templates.py
src/Postman2Jmeter/: __init__.py  converter.py  gui.py  main.py
