[metadata]
name = postman2jmeter
version = 1.0.0
description = Convert Postman/ApiPost collections to JMeter test plans
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    PyQt5>=5.15.10
    jinja2>=3.1.3

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    postman2jmeter = postman2jmeter.main:main